--- a/pickerview/build.gradle
+++ b/pickerview/build.gradle
@@ -1,49 +1,233 @@
 apply plugin: 'com.android.library'
+// 这里添加下面两行代码。
 apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.novoda.bintray-release'//添加插件
-
-
-
+apply plugin: 'com.jfrog.bintray'
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
-
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 25
-        versionCode 23
-        versionName "3.2.7"
+        // applicationId "com.yanzhenjie.andserver.sample" // 这一行要删除，因为library不允许有applicationId。
+        minSdkVersion 8
+        targetSdkVersion 26
+        versionCode 1
+        versionName '1.0.1'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+}
+/*dependencies {
+    // 如果你的library有依赖别的jar，这里要把jar依赖进来。
+    compile fileTree(dir: 'libs', includes: ['*.jar'])
+}*/
+
+// 项目引用的版本号，比如compile 'com.yanzhenjie:andserver:1.0.1'中的1.0.1就是这里配置的。
+version = "1.0.2"
+// 定义两个链接，下面会用到。
+def siteUrl = 'https://github.com/lizhanqi/Android-PickerView' // 项目主页。
+def gitUrl = 'https://github.com/lizhanqi/Android-PickerView.git' // Git仓库的url。
+// 唯一包名，比如compile 'com.yanzhenjie:andserver:1.0.1'中的com.yanzhenjie就是这里配置的。
+group = "com.lizhanqi"
+install {
+    repositories.mavenInstaller {
+        // 生成pom.xml和参数
+        pom {
+            project {
+                packaging 'aar'
+                // 项目描述，复制我的话，这里需要修改。
+                name 'PickerView For Android'// 可选，项目名称。
+                description '一个简单的选择视图'// 可选，项目描述。
+                url siteUrl // 项目主页，这里是引用上面定义好。
+                // 软件开源协议，现在一般都是Apache License2.0吧，复制我的，这里不需要修改。
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                    }
+                }
+                //填写开发者基本信息，复制我的，这里需要修改。
+                developers {
+                    developer {
+                        id 'lizhanqi' // 开发者的id。
+                        name 'lizhanqi' // 开发者名字。
+                        email 'lizhanqihd@163.com' // 开发者邮箱。
+                    }
+                }
+
+                // SCM，复制我的，这里不需要修改。
+                scm {
+                    connection gitUrl // Git仓库地址。
+                    developerConnection gitUrl // Git仓库地址。
+                    url siteUrl // 项目主页。
+                }
+            }
         }
     }
-    lintOptions {
-        abortOnError false
+}
+// 生成jar包的task，不需要修改。
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+// 生成jarDoc的task，不需要修改。
+task javadoc(type: Javadoc) {
+    source = android.sourceSets.main.java.srcDirs
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    // destinationDir = file("../javadoc/")
+    failOnError false // 忽略注释语法错误，如果用jdk1.8你的注释写的不规范就编译不过。
+}
+// 生成javaDoc的jar，不需要修改。
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives javadocJar
+    archives sourcesJar
+}
+// 这里是读取Bintray相关的信息，我们上传项目到github上的时候会把gradle文件传上去，所以不要把帐号密码的信息直接写在这里，写在local.properties中，这里动态读取。
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+bintray {
+    user = properties.getProperty("bintray.user") // Bintray的用户名。
+    key = properties.getProperty("bintray.apikey") // Bintray刚才保存的ApiKey。
+
+    configurations = ['archives']
+    pkg {
+        repo = "maven"  // 上传到maven库。（这里要特别注意，如果写了maven报404错误，请在bintray创建一个仓库，这里填改成你创建的仓库的名字，如何创建请看下图。）
+        name = "PickerView"  // 发布到Bintray上的项目名字，这里的名字不是compile 'com.yanzhenjie:andserver:1.0.1'中的andserver。
+        userOrg = 'lizhanqi' // Bintray的用户名，2016年11月更新。
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        licenses = ["Apache-2.0"]
+        publish = true // 是否是公开项目。
     }
 }
 
-allprojects {
-    tasks.withType(Javadoc) {//兼容中文字符
-        options{
-            encoding "UTF-8"
-            charSet 'UTF-8'
-            links "http://docs.oracle.com/javase/7/docs/api"
-        }
-    }
-}
-publish {
-    userOrg = 'contrarywind'//bintray.com 用户名/组织名 user/org name
-    groupId = 'com.contrarywind'//JCenter上显示的路径 path
-    artifactId = 'Android-PickerView'//项目名称 project name
-    publishVersion = '3.2.7'//版本号 version code
-    desc = 'this is a pickerview for android'//项目描述 description
-    website = 'https://github.com/Contrarywind/Android-PickerView' //项目网址链接 link
-}
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
 
-}
+
+
+
+
+
+
+
+//
+//apply plugin: 'com.android.library'
+//// 这里添加下面两行代码。
+//apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.jfrog.bintray'
+//android {
+//    compileSdkVersion 26
+//    buildToolsVersion '26.0.2'
+//    defaultConfig {
+//        // applicationId "com.yanzhenjie.andserver.sample" // 这一行要删除，因为library不允许有applicationId。
+//        minSdkVersion 8
+//        targetSdkVersion 26
+//        versionCode 1
+//        versionName '1.0.1'
+//    }
+//}
+///*dependencies {
+//    // 如果你的library有依赖别的jar，这里要把jar依赖进来。
+//    compile fileTree(dir: 'libs', includes: ['*.jar'])
+//}*/
+//
+//// 项目引用的版本号，比如compile 'com.yanzhenjie:andserver:1.0.1'中的1.0.1就是这里配置的。
+//version = "1.0.1"
+//// 定义两个链接，下面会用到。
+//def siteUrl = 'https://github.com/lizhanqi/Android-PickerView' // 项目主页。
+//def gitUrl = 'https://github.com/lizhanqi/Android-PickerView.git' // Git仓库的url。
+//// 唯一包名，比如compile 'com.yanzhenjie:andserver:1.0.1'中的com.yanzhenjie就是这里配置的。
+//group = "com.lizhanqi"
+//// 唯一包名，比如compile 'com.yanzhenjie:andserver:1.0.1'中的andserver就是这里配置的。
+//def         compileID ='PickerView'
+//// 项目引用的版本号，比如compile 'com.yanzhenjie:andserver:1.0.1'中的1.0.1就是这里配置的。
+//version = "1.0.1"
+//install {
+//    repositories.mavenInstaller {
+//        // 生成pom.xml和参数
+//        pom {
+//            project {
+//                artifactId compileID
+//                packaging 'aar'
+//                // 项目描述，复制我的话，这里需要修改。
+//                name 'StepsView For Android'// 可选，项目名称。
+//                description '一个简单的安卓步骤流程view'// 可选，项目描述。
+//                url siteUrl // 项目主页，这里是引用上面定义好。
+//                // 软件开源协议，现在一般都是Apache License2.0吧，复制我的，这里不需要修改。
+//                licenses {
+//                    license {
+//                        name 'The Apache Software License, Version 2.0'
+//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                    }
+//                }
+//                //填写开发者基本信息，复制我的，这里需要修改。
+//                developers {
+//                    developer {
+//                        id 'lizhanqi' // 开发者的id。
+//                        name 'lizhanqi' // 开发者名字。
+//                        email 'lizhanqihd@163.com' // 开发者邮箱。
+//                    }
+//                }
+//
+//                // SCM，复制我的，这里不需要修改。
+//                scm {
+//                    connection gitUrl // Git仓库地址。
+//                    developerConnection gitUrl // Git仓库地址。
+//                    url siteUrl // 项目主页。
+//                }
+//            }
+//        }
+//    }
+//}
+//// 生成jar包的task，不需要修改。
+//task sourcesJar(type: Jar) {
+//    from android.sourceSets.main.java.srcDirs
+//    classifier = 'sources'
+//}
+//// 生成jarDoc的task，不需要修改。
+//task javadoc(type: Javadoc) {
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//    // destinationDir = file("../javadoc/")
+//    failOnError false // 忽略注释语法错误，如果用jdk1.8你的注释写的不规范就编译不过。
+//    print(classpath)
+//}
+//// 生成javaDoc的jar，不需要修改。
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
+//artifacts {
+//    archives javadocJar
+//    archives sourcesJar
+//}
+//
+//
+//
+//
+//
+//
+//// 这里是读取Bintray相关的信息，我们上传项目到github上的时候会把gradle文件传上去，所以不要把帐号密码的信息直接写在这里，写在local.properties中，这里动态读取。
+//Properties properties = new Properties()
+//properties.load(project.rootProject.file('local.properties').newDataInputStream())
+//bintray {
+//    user = properties.getProperty("bintray.user") // Bintray的用户名。
+//    key = properties.getProperty("bintray.apikey") // Bintray刚才保存的ApiKey。
+//
+//    configurations = ['archives']
+//    pkg {
+//        repo = "maven"  // 上传到maven库。（这里要特别注意，如果写了maven报404错误，请在bintray创建一个仓库，这里填改成你创建的仓库的名字，如何创建请看下图。）
+//        name = "PickerView"  // 发布到Bintray上的项目名字，这里的名字不是compile 'com.yanzhenjie:andserver:1.0.1'中的andserver。
+//        userOrg = 'lizhanqi' // Bintray的用户名，2016年11月更新。
+//        websiteUrl = siteUrl
+//        vcsUrl = gitUrl
+//        licenses = ["Apache-2.0"]
+//        publish = true // 是否是公开项目。
+//    }
+//    javadoc { //jav doc采用utf-8编码否则会报“GBK的不可映射字符”错误
+//        options {
+//            encoding "UTF-8"
+//            charSet 'UTF-8'
+//        }
+//    }
+//}
